fixed the overflow in the ui

--- a/src/style.css
+++ b/src/style.css
@@ -318,7 +318,7 @@
 {
     flex: 1;
     display: grid;
-        grid-template-columns: repeat(auto-fit,minmax(350px,1fr));
+        grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
         align-content: space-between;
     row-gap: 30px;
     column-gap: 10px;
